--- a/app/views/contents/_form.html.erb
+++ b/app/views/contents/_form.html.erb
@@ -12,12 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.cktext_area :body %>
   </div>
   <div class="actions">
     <%= f.submit %>
