Added edit for each model/content
Roots to content#index.
Content#index shows all the models available for edit in a dropdown.
Once a model is selected in the dd, an edit iframe enables editing of
the model's content and style via a ckeditor textarea.
// unfinished : /uploads shows a screen where one can upload via drag
and drop or simple file select an image to upload to server via
carrierwave and dropzonejs.
// unfinished : added cloudinary to upload image to cloud

--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the contents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.edit_content_iframe{
+	width: 60%;
+	height: 600px;
+	float: left;
+	clear: left;
+}
+
+#choose_model{
+	float: left;
+}
+
+#new_content_link{
+	float: left;
+	clear: left;
+}
