--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,29 +1,36 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Contents</h1>
+<h1>Listing Content models</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+
+  <select id="choose_model" name="model">
+    <!-- options dynamically added depending on number of contents (i.e. models) -->
+  </select>
 
   <tbody>
+
     <% @contents.each do |content| %>
       <tr>
-        <td><%= content.name %></td>
-        <td><%= content.body %></td>
-        <td><%= link_to 'Show', content %></td>
-        <td><%= link_to 'Edit', edit_content_path(content) %></td>
-        <td><%= link_to 'Destroy', content, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- script to append each model option depending on number of content in contents -->
+        <!-- edit content iframe -->
+        <iframe src="/contents/<%= content.id %>/edit" class="edit_content_iframe" id="edit_content<%= content.id %>_iframe">error!</iframe>
+        
+        <script type="text/javascript">
+          $('#choose_model').append("<option value='<%= content.id %>'>Model " +  <%= content.id %> + "</option>");
+          if(<%= content.id %> != 1){
+            $("#edit_content<%= content.id %>_iframe").hide();
+          }
+        </script>
+
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<div id="new_content_link">
+  <%= link_to 'New Content', new_content_path %>
+</div>
 
-<%= link_to 'New Content', new_content_path %>
+
