Moved log-in bar to contents index page instead of all pages
slight styling on upload iframe

--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -17,3 +17,18 @@
 	float: left;
 	clear: left;
 }
+
+#cke_1_contents{
+	height: 350px !important;
+}
+
+#uploads_iframe{
+	float: right;
+	width: 30%;
+	height: 600px;
+	margin-top: 40px;
+}
+
+.edit_content_iframe .navbar-text{
+	display: none;
+}
